--- a/SampleTaskWPF/MainWindow.xaml
+++ b/SampleTaskWPF/MainWindow.xaml
@@ -14,14 +14,17 @@
                 <Setter Property="Width" Value="350"></Setter>
             </Style>
             <Style x:Key="StackPanelStyle" TargetType="StackPanel">
-                <Setter Property="Background" Value="#F7F7F7"></Setter>
+                <Setter Property="Background" Value="{StaticResource LightGrayColor}"></Setter>
                 <Setter Property="Margin" Value="50,50"></Setter>
             </Style>
             <Style x:Key="LoginPageTextBoxStyle" TargetType="TextBox">
                 <Setter Property="Height" Value="30"></Setter>
             </Style>
+            <Style x:Key="BorderStyle" TargetType="{x:Type Border}">
+                <Setter Property="CornerRadius" Value="5"></Setter>
+            </Style>
             <Style x:Key="LoginButtonStyle" TargetType="Button">
-                <Setter Property="Background" Value="#2FA999"/>
+                <Setter Property="Background" Value="{StaticResource LightGreenColor}"/>
                 <Setter Property="Foreground" Value="White"/>
                 <Setter Property="Margin" Value="0,20"/>
                 <Setter Property="Width" Value="100"/>
@@ -30,7 +33,7 @@
         </Grid.Resources>
         <Image Source="Images\img_logo_trient.png" MaxHeight="40" VerticalAlignment="Top"/>
         <Grid VerticalAlignment="Center" Margin="0,60" >
-            <Border BorderBrush="#D8D8D8" BorderThickness="1">
+            <Border BorderBrush="#D8D8D8" BorderThickness="1" Style="{StaticResource BorderStyle}">
                 <StackPanel Style="{StaticResource MainStackPanelStyle}">
                     <StackPanel Style="{StaticResource StackPanelStyle}">
                         <Label Content="Email ID"></Label>
