--- a/SampleTaskWPF/HomeWindowHeaderControl.xaml
+++ b/SampleTaskWPF/HomeWindowHeaderControl.xaml
@@ -14,9 +14,10 @@
                 <Setter Property="FontSize" Value="20"/>
             </Style>
             <Style x:Key="ImageStyle" TargetType="Image">
-                <Setter Property="Width" Value="40"/>
-                <Setter Property="Height" Value="40"/>
+                <Setter Property="Width" Value="30"/>
+                <Setter Property="Height" Value="30"/>
                 <Setter Property="HorizontalAlignment" Value="Right"/>
+                <Setter Property="Margin" Value="0,3,5,0"/>
             </Style>
             <Style x:Key="HeaderStyle" TargetType="StackPanel">
                 <Setter Property="Background" Value="#333333"/>
@@ -31,7 +32,7 @@
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 <Label Content="Sample Task in WPF" Style="{StaticResource LableStyle}"></Label>
-                <Image Source="Images/icon_settings.png" Style="{StaticResource ImageStyle}" Grid.Column="1"/>
+                <Image x:Name="imgLogout" Source="Images/SettingsIcon.png" Style="{StaticResource ImageStyle}" Grid.Column="1" MouseDown="ImgLogout_MouseDown"/>
             </Grid>
         </StackPanel>
     </Grid>
