--- a/SampleTaskWPF/HomeWindow.xaml
+++ b/SampleTaskWPF/HomeWindow.xaml
@@ -50,7 +50,7 @@
             <Setter Property="Height" Value="30"></Setter>
             <Setter Property="Width" Value="80"></Setter>
             <Setter Property="Foreground" Value="White"></Setter>
-            <Setter Property="Margin" Value="10,40,0,0"></Setter>
+            <Setter Property="Margin" Value="0,40,20,0"></Setter>
             <Setter Property="FontSize" Value="16"></Setter>
             <Setter Property="Padding" Value="5,0,5,5"></Setter>
             <Style.Resources>
@@ -149,8 +149,8 @@
                                 <StackPanel Orientation="Horizontal" Margin="15,0,0,0">
                                     <Grid>
                                         <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="430" />
-                                            <ColumnDefinition Width="430" />
+                                            <ColumnDefinition Width="410" />
+                                            <ColumnDefinition Width="410" />
                                             <ColumnDefinition Width="390" />
                                             <ColumnDefinition />
                                         </Grid.ColumnDefinitions>
@@ -159,7 +159,7 @@
                                         <Label Content="{Binding City}" Grid.Column="2"></Label>
                                     </Grid>
                                     <Border x:Name="btnRemove" MouseDown="btnRemoveList_Click">
-                                        <Image x:Name="btnAdd" Source="Images/iconbtn_check.png" />
+                                        <Image x:Name="btnAdd" Source="Images/iconbtn_check.png" Margin="40,0,0,0"/>
                                     </Border>
                                 </StackPanel>
                             </DataTemplate>
